--- a/bj.html
+++ b/bj.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Блэкджек — FirstClub</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="/webapp_guard.js"></script>
 
   <style>
     :root{
@@ -188,58 +189,20 @@
   <div id="toast" class="toast">Ок</div>
 
 <script>
-  // ===== Telegram / theme / uid fallback =====
-  let tgInitData = "";
+  const tgInstance = initTelegramGuard();
 
-  function isColorDark(hex){
-    if(!hex || hex[0] !== "#") return false;
-    const r=parseInt(hex.slice(1,3),16), g=parseInt(hex.slice(3,5),16), b=parseInt(hex.slice(5,7),16);
-    return (0.299*r+0.587*g+0.114*b)/255 < 0.5;
-  }
-  function initTelegram(){
-    const tg=window.Telegram && window.Telegram.WebApp;
-    if(!tg) return null;
-    tg.ready();
-    
-    tgInitData = tg.initData || "";
-if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true; }
-    try{ tg.disableVerticalSwipes(); }catch(e){}
-    document.documentElement.style.overscrollBehavior="none";
-    document.body.style.overscrollBehavior="none";
-    const p=tg.themeParams||{};
-    if(p.bg_color) document.documentElement.style.setProperty("--bg", p.bg_color);
-    if(p.secondary_bg_color) document.documentElement.style.setProperty("--panel", p.secondary_bg_color);
-    if(p.text_color) document.documentElement.style.setProperty("--text", p.text_color);
-    if(p.hint_color) document.documentElement.style.setProperty("--muted", p.hint_color);
-    if(p.text_color) document.documentElement.setAttribute("data-theme", isColorDark(p.text_color) ? "light":"dark");
-    tg.setHeaderColor(p.bg_color || "#0a0d12");
-    tg.setBackgroundColor(p.bg_color || "#0a0d12");
-    return tg;
-  }
-  const tg = initTelegram();
-  if(!tg){
-    const prefersLight=window.matchMedia && window.matchMedia("(prefers-color-scheme: light)").matches;
-    document.documentElement.setAttribute("data-theme", prefersLight? "light":"dark");
-  }
-  function getUidFromUrl(){
-    try{ return new URL(location.href).searchParams.get("uid"); }catch(e){ return null; }
-  }
   function getTgUserId(){
-    try{ return tg?.initDataUnsafe?.user?.id || getUidFromUrl(); }catch(e){ return getUidFromUrl(); }
+    try{ return tg?.initDataUnsafe?.user?.id || null; }catch(e){ return null; }
   }
-
-  const API_BASE="https://api.firstgamble.ru";
 
   async function loadBalance(){
     const uid=getTgUserId();
     const el=document.getElementById("balanceValue");
     if(!el) return;
     try{
-      const headers = tgInitData?{"X-Telegram-InitData":tgInitData}:{};
-      let url = API_BASE + "/api/balance";
+      let url = "/api/balance";
       if(uid) url += "?user_id=" + uid;
-      const r=await fetch(url, { headers });
-      const d=await r.json();
+      const d=await apiGet(url);
       el.textContent=d.balance??0;
       localStorage.setItem("balance_local", el.textContent);
     }catch(e){
@@ -248,16 +211,12 @@ if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true
   }
   async function sendPoint(uid, game){
     try{
-      const body=JSON.stringify({user_id:String(uid), game:String(game)||"bj"});
-      const r=await fetch(API_BASE+"/api/add_point", {method:"POST", headers: (()=>{ const h={ "Content-Type":"application/json" }; if(tgInitData) h["X-Telegram-InitData"]=tgInitData; return h; })(), body});
-      const text=await r.text();
-      try{ return JSON.parse(text); }catch{ return {ok:false, error:"json_parse_fail", raw:text}; }
+      return await apiPost("/api/add_point", {user_id:String(uid), game:String(game)||"bj"});
     }catch(err){ return {ok:false, error:String(err)}; }
   }
   async function reportGame(uid, game, result){
     try{
-      const body=JSON.stringify({user_id:String(uid), game:String(game), result:String(result)});
-      await fetch(API_BASE+"/api/report_game", {method:"POST", headers: (()=>{ const h={ "Content-Type":"application/json" }; if(tgInitData) h["X-Telegram-InitData"]=tgInitData; return h; })(), body});
+      await apiPost("/api/report_game", {user_id:String(uid), game:String(game), result:String(result)});
     }catch(e){}
   }
   function showToast(t){
