--- a/dice.html
+++ b/dice.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Кости — FirstClub</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="/webapp_guard.js"></script>
 
   <style>
     :root{
@@ -170,50 +171,11 @@
   <div id="toast" class="toast">Ок</div>
 
 <script>
-  // ===== Telegram + Theme + UID fallback =====
-  let tgInitData = "";
+  const tgInstance = initTelegramGuard();
 
-  function isColorDark(hex){
-    if(!hex || hex[0] !== "#") return false;
-    const r = parseInt(hex.slice(1,3),16), g = parseInt(hex.slice(3,5),16), b = parseInt(hex.slice(5,7),16);
-    return (0.299*r + 0.587*g + 0.114*b)/255 < 0.5;
-  }
-  function initTelegram(){
-    const tg = window.Telegram && window.Telegram.WebApp;
-    if(!tg) return null;
-    tg.ready();
-    
-    tgInitData = tg.initData || "";
-if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true; }
-    try{ tg.disableVerticalSwipes(); }catch(e){}
-    document.documentElement.style.overscrollBehavior="none";
-    document.body.style.overscrollBehavior="none";
-    const p = tg.themeParams || {};
-    if(p.bg_color) document.documentElement.style.setProperty("--bg", p.bg_color);
-    if(p.secondary_bg_color) document.documentElement.style.setProperty("--panel", p.secondary_bg_color);
-    if(p.text_color) document.documentElement.style.setProperty("--text", p.text_color);
-    if(p.hint_color) document.documentElement.style.setProperty("--muted", p.hint_color);
-    if(p.text_color){
-      document.documentElement.setAttribute("data-theme", isColorDark(p.text_color) ? "light" : "dark");
-    }
-    tg.setHeaderColor(p.bg_color || "#0a0d12");
-    tg.setBackgroundColor(p.bg_color || "#0a0d12");
-    return tg;
-  }
-  const tg = initTelegram();
-  if(!tg){
-    const prefersLight = window.matchMedia && window.matchMedia("(prefers-color-scheme: light)").matches;
-    document.documentElement.setAttribute("data-theme", prefersLight ? "light" : "dark");
-  }
-  function getUidFromUrl(){
-    try{ return new URL(location.href).searchParams.get("uid"); }catch(e){ return null; }
-  }
   function getTgUserId(){
-    try{ return tg?.initDataUnsafe?.user?.id || getUidFromUrl(); }catch(e){ return getUidFromUrl(); }
+    try{ return tg?.initDataUnsafe?.user?.id || null; }catch(e){ return null; }
   }
-
-  // ===== API =====
-  const API_BASE = "https://api.firstgamble.ru";
 
 
   async function loadBalance(){
@@ -222,12 +184,9 @@ if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true
     if(!el) return;
 
     try{
-      const headers = {};
-      if (tgInitData) headers["X-Telegram-InitData"] = tgInitData;
-      let url = API_BASE + "/api/balance";
+      let url = "/api/balance";
       if(userId) url += "?user_id=" + userId;
-      const res = await fetch(url, { headers });
-      const data = await res.json();
+      const data = await apiGet(url);
       el.textContent = data.balance ?? 0;
       localStorage.setItem("balance_local", el.textContent);
     }catch(e){
@@ -237,16 +196,7 @@ if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true
 
   async function sendPoint(userId, game){
     const attempt = async ()=>{
-      const body = JSON.stringify({ user_id: String(userId), game: String(game) || "dice" });
-      const res = await fetch(API_BASE + "/api/add_point", {
-        method: "POST",
-        headers: (()=>{ const h={ "Content-Type":"application/json" }; if(tgInitData) h["X-Telegram-InitData"]=tgInitData; return h; })(),
-        body,
-        cache: "no-store",
-        keepalive: true
-      });
-      const text = await res.text();
-      try{ return JSON.parse(text); }catch{ return {ok:false, error:"json_parse_fail", raw:text}; }
+      return await apiPost("/api/add_point", { user_id: String(userId), game: String(game) || "dice" });
     };
     try{
       return await attempt();
@@ -258,12 +208,7 @@ if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true
 
   async function reportGame(userId, game, result){
     try{
-      const body = JSON.stringify({ user_id:String(userId), game:String(game), result:String(result) });
-      await fetch(API_BASE + "/api/report_game", {
-        method:"POST",
-        headers: (()=>{ const h={ "Content-Type":"application/json" }; if(tgInitData) h["X-Telegram-InitData"]=tgInitData; return h; })(),
-        body
-      });
+      await apiPost("/api/report_game", { user_id:String(userId), game:String(game), result:String(result) });
     }catch(e){}
   }
 
