--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>FirstClub — FirstClub</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
+<script src="/webapp_guard.js"></script>
 <style>
 :root{--bg:#0a0d12;--bg2:#0e1117;--panel:#0d1117;--card:#111722;--card2:#0f1520;--stroke:rgba(255,255,255,.06);--stroke2:rgba(100,160,255,.25);--blue:#3b82f6;--blue2:#1d4ed8;--text:#e6edf3;--muted:#98a2b3;--shadow:0 0 0 1px var(--stroke),0 8px 30px rgba(0,0,0,.6);}
 html[data-theme="light"]{--bg:#f4f7fb;--bg2:#eef2f7;--panel:#fff;--card:#fff;--card2:#f6f8fb;--stroke:rgba(10,20,40,.08);--stroke2:rgba(59,130,246,.35);--blue:#2563eb;--blue2:#1d4ed8;--text:#0b1220;--muted:#52607a;--shadow:0 0 0 1px var(--stroke),0 10px 26px rgba(10,20,40,.08);}
@@ -99,31 +100,25 @@ background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:point
 </div>
 
 <script>
-let tgInitData = "";
+const tgInstance = initTelegramGuard();
 
-function isColorDark(hex){ if(!hex||hex[0]!=="#") return false; const r=parseInt(hex.slice(1,3),16),g=parseInt(hex.slice(3,5),16),b=parseInt(hex.slice(5,7),16);
-return (0.299*r+0.587*g+0.114*b)/255<0.5;}
-function initTelegram(){ const tg=window.Telegram&&window.Telegram.WebApp; if(!tg) return null; tg.ready();
+function getTgUserId(){
+  try{ return tg?.initDataUnsafe?.user?.id || null; }catch(e){ return null; }
+}
 
-
-    tgInitData = tg.initData || "";
-if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true; }
-try{ tg.disableVerticalSwipes(); }catch(e){}
-document.documentElement.style.overscrollBehavior="none";
-document.body.style.overscrollBehavior="none";
-
-const p=tg.themeParams||{}; if(p.bg_color) document.documentElement.style.setProperty("--bg",p.bg_color); if(p.secondary_bg_color) document.documentElement.style.setProperty("--panel",p.secondary_bg_color);
-if(p.text_color) document.documentElement.style.setProperty("--text",p.text_color); if(p.hint_color) document.documentElement.style.setProperty("--muted",p.hint_color);
-if(p.text_color) document.documentElement.setAttribute("data-theme", isColorDark(p.text_color) ? "light":"dark");
-tg.setHeaderColor(p.bg_color||"#0a0d12"); tg.setBackgroundColor(p.bg_color||"#0a0d12"); return tg; }
-const tg=initTelegram(); if(!tg){ const prefersLight=window.matchMedia&&window.matchMedia("(prefers-color-scheme: light)").matches; document.documentElement.setAttribute("data-theme", prefersLight?"light":"dark"); }
-function getUidFromUrl(){ try{const u=new URL(location.href); return u.searchParams.get("uid");}catch(e){return null;} }
-function getTgUserId(){ try{ return tg?.initDataUnsafe?.user?.id || getUidFromUrl(); }catch(e){ return getUidFromUrl(); } }
-const API_BASE="https://api.firstgamble.ru";
-
-async function loadBalance(){ const uid=getTgUserId(); const el=document.getElementById("balanceValue"); if(!el) return;
-try{ const headers = tgInitData?{"X-Telegram-InitData":tgInitData}:{}; let url = API_BASE + "/api/balance"; if(uid) url += "?user_id="+uid; const r=await fetch(url, { headers }); const d=await r.json(); el.textContent=d.balance??0; localStorage.setItem("balance_local", el.textContent); }
-catch(e){ el.textContent=localStorage.getItem("balance_local")||"0"; }
+async function loadBalance(){
+  const uid=getTgUserId();
+  const el=document.getElementById("balanceValue");
+  if(!el) return;
+  try{
+    let url = "/api/balance";
+    if(uid) url += "?user_id="+uid;
+    const d = await apiGet(url);
+    el.textContent=d.balance??0;
+    localStorage.setItem("balance_local", el.textContent);
+  }catch(e){
+    el.textContent=localStorage.getItem("balance_local")||"0";
+  }
 }
 loadBalance();
 </script>
