--- a/ludka.html
+++ b/ludka.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Лудка — FirstClub</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="/webapp_guard.js"></script>
 
   <style>
     :root{
@@ -133,35 +134,7 @@
   </div>
 
   <script>
-    function hexToRgb(hex){
-      if(!hex || hex[0] !== "#") return null;
-      const r=parseInt(hex.slice(1,3),16), g=parseInt(hex.slice(3,5),16), b=parseInt(hex.slice(5,7),16);
-      return {r,g,b};
-    }
-    function isBgDark(hex){
-      const c=hexToRgb(hex); if(!c) return true;
-      const lum=(0.299*c.r+0.587*c.g+0.114*c.b)/255;
-      return lum < 0.55;
-    }
-    function applyTheme(p){
-      if(p.bg_color) document.documentElement.style.setProperty("--bg", p.bg_color);
-      if(p.secondary_bg_color) document.documentElement.style.setProperty("--panel", p.secondary_bg_color);
-      if(p.text_color) document.documentElement.style.setProperty("--text", p.text_color);
-      if(p.hint_color) document.documentElement.style.setProperty("--muted", p.hint_color);
-      if(p.bg_color && !isBgDark(p.bg_color)) document.documentElement.setAttribute("data-theme","light");
-      else document.documentElement.setAttribute("data-theme","dark");
-    }
-    (function initTelegram(){
-      const tg = window.Telegram && window.Telegram.WebApp;
-      if(!tg) return;
-      tg.ready();
-      if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true; }
-      try{ tg.disableVerticalSwipes(); }catch(e){}
-      document.documentElement.style.overscrollBehavior="none";
-      document.body.style.overscrollBehavior="none";
-      applyTheme(tg.themeParams||{});
-      tg.onEvent("themeChanged", () => applyTheme(tg.themeParams||{}));
-    })();
+    const tgInstance = initTelegramGuard();
   </script>
 </body>
 </html>
