--- a/rating.html
+++ b/rating.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Рейтинг — FirstClub</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="/webapp_guard.js"></script>
   <style>
     :root{
       --bg:#0a0d12; --bg2:#0e1117; --panel:#0d1117;
@@ -164,44 +165,9 @@
   </div>
 
 <script>
-  let tgInitData = "";
+  const tgInstance = initTelegramGuard();
 
-  function isColorDark(hex){
-    if(!hex || hex[0] !== "#") return false;
-    const r=parseInt(hex.slice(1,3),16), g=parseInt(hex.slice(3,5),16), b=parseInt(hex.slice(5,7),16);
-    return (0.299*r+0.587*g+0.114*b)/255 < 0.5;
-  }
-  function initTelegram(){
-    const tg=window.Telegram && window.Telegram.WebApp;
-    if(!tg) return null;
-    tg.ready();
-    
-    
-    tgInitData = tg.initData || "";
-if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true; }
-    try{ tg.disableVerticalSwipes(); }catch(e){}
-    document.documentElement.style.overscrollBehavior="none";
-    document.body.style.overscrollBehavior="none";
-    const p=tg.themeParams||{};
-    if(p.bg_color) document.documentElement.style.setProperty("--bg", p.bg_color);
-    if(p.secondary_bg_color) document.documentElement.style.setProperty("--panel", p.secondary_bg_color);
-    if(p.text_color) document.documentElement.style.setProperty("--text", p.text_color);
-    if(p.hint_color) document.documentElement.style.setProperty("--muted", p.hint_color);
-    if(p.text_color) document.documentElement.setAttribute("data-theme", isColorDark(p.text_color) ? "light":"dark");
-    tg.setHeaderColor(p.bg_color || "#0a0d12");
-    tg.setBackgroundColor(p.bg_color || "#0a0d12");
-    return tg;
-  }
-  const tg = initTelegram();
-  if(!tg){
-    const prefersLight=window.matchMedia && window.matchMedia("(prefers-color-scheme: light)").matches;
-    document.documentElement.setAttribute("data-theme", prefersLight? "light":"dark");
-  }
-  function getUidFromUrl(){ try{ return new URL(location.href).searchParams.get("uid"); }catch(e){ return null; } }
-  function getTgUserId(){ try{ return tg?.initDataUnsafe?.user?.id || getUidFromUrl(); }catch(e){ return getUidFromUrl(); } }
-
-  const API_BASE="https://api.firstgamble.ru";
-
+  function getTgUserId(){ try{ return tg?.initDataUnsafe?.user?.id || null; }catch(e){ return null; } }
 
   const rowsEl=document.getElementById("rows");
   const emptyEl=document.getElementById("empty");
@@ -243,8 +209,7 @@ if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true
     emptyEl.style.display="none";
 
     try{
-      const res = await fetch(`${API_BASE}/api/leaderboard?game=${game}&sort=${sort}&limit=100`, { headers: (tgInitData?{"X-Telegram-InitData":tgInitData}:{}) });
-      const data = await res.json();
+      const data = await apiGet(`/api/leaderboard?game=${game}&sort=${sort}&limit=100`);
       if(!data.ok || !data.rows || data.rows.length===0){
         emptyEl.style.display="block";
         return;
