--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Магазин — FirstClub</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
+<script src="/webapp_guard.js"></script>
 <style>
 :root{
   --bg:#0a0d12;--bg2:#0e1117;--panel:#0d1117;--card:#111722;--card2:#0f1520;
@@ -123,93 +124,19 @@ header{display:flex;align-items:center;justify-content:space-between;padding:10p
 
 <script>
 
-const API_BASE = "https://api.firstgamble.ru";
-
-let tgInitData = "";
+const tgInstance = initTelegramGuard();
 
 let uid = null;
-let tg = null;
 
-function hexToRgb(hex){
-  if(!hex || hex[0] !== "#") return null;
-  return {r:parseInt(hex.slice(1,3),16), g:parseInt(hex.slice(3,5),16), b:parseInt(hex.slice(5,7),16)};
-}
-function isBgDark(hex){
-  const c=hexToRgb(hex); if(!c) return true;
-  const lum=(0.299*c.r+0.587*c.g+0.114*c.b)/255;
-  return lum < 0.55;
+function getTgUserId(){
+  try{ return tg?.initDataUnsafe?.user?.id || null; }catch(e){ return null; }
 }
 
-function initTelegram(){
-  tg = window.Telegram && window.Telegram.WebApp;
-  if(!tg) return null;
-
-  tg.ready();
-  
-    tgInitData = tg.initData || "";
-if(!window.__tgExpanded){
-    try{ tg.expand(); }catch(e){}
-    window.__tgExpanded = true;
-  }
-  try{ tg.disableVerticalSwipes(); }catch(e){}
-  document.documentElement.style.overscrollBehavior = "none";
-  document.body.style.overscrollBehavior = "none";
-
-  const p = tg.themeParams || {};
-  if(p.bg_color) document.documentElement.style.setProperty("--bg", p.bg_color);
-  if(p.secondary_bg_color) document.documentElement.style.setProperty("--panel", p.secondary_bg_color);
-  if(p.text_color) document.documentElement.style.setProperty("--text", p.text_color);
-  if(p.hint_color) document.documentElement.style.setProperty("--muted", p.hint_color);
-  if(p.bg_color && !isBgDark(p.bg_color)) document.documentElement.setAttribute("data-theme","light");
-  else document.documentElement.setAttribute("data-theme","dark");
-
-  uid = new URLSearchParams(location.search).get("uid")
-        || (tg.initDataUnsafe && tg.initDataUnsafe.user && tg.initDataUnsafe.user.id)
-        || null;
-
-  tg.onEvent("themeChanged", () => {
-    const p=tg.themeParams||{};
-    if(p.bg_color) document.documentElement.style.setProperty("--bg", p.bg_color);
-    if(p.secondary_bg_color) document.documentElement.style.setProperty("--panel", p.secondary_bg_color);
-    if(p.text_color) document.documentElement.style.setProperty("--text", p.text_color);
-    if(p.hint_color) document.documentElement.style.setProperty("--muted", p.hint_color);
-    if(p.bg_color && !isBgDark(p.bg_color)) document.documentElement.setAttribute("data-theme","light");
-    else document.documentElement.setAttribute("data-theme","dark");
-  });
-
-  return tg;
+try{
+  uid = new URLSearchParams(location.search).get("uid") || getTgUserId();
+}catch(e){
+  uid = getTgUserId();
 }
-
-async function apiGet(path){
-  try{
-    const headers = {};
-    if(tgInitData) headers["X-Telegram-InitData"] = tgInitData;
-
-    const r = await fetch(API_BASE + path, {cache:"no-store", headers});
-    const txt = await r.text();
-    try{ return JSON.parse(txt); }catch(e){ return {ok:false, error:"bad json", raw:txt}; }
-  }catch(e){
-    return {ok:false, error:"network"};
-  }
-}
-async function apiPost(path, body){
-  try{
-    const headers = {"Content-Type":"application/json"};
-    if(tgInitData) headers["X-Telegram-InitData"] = tgInitData;
-
-    const r = await fetch(API_BASE + path, {
-      method:"POST",
-      headers,
-      body:JSON.stringify(body||{}),
-      cache:"no-store"
-    });
-    const txt = await r.text();
-    try{ return JSON.parse(txt); }catch(e){ return {ok:false, error:"bad json", raw:txt}; }
-  }catch(e){
-    return {ok:false, error:"network"};
-  }
-}
-
 
 let balance = 0;
 
@@ -311,7 +238,7 @@ function setupTabs(){
 }
 
 (function main(){
-  initTelegram();
+  if(!tgInstance) return;
   setupTabs();
   renderGoods();
   renderTickets();
